--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,12 @@
-
-\documentclass[master]{thesis-uestc}
+\documentclass[bachelor]{thesis-uestc}
 
 \title{时域积分方程时间步进算法及其快速算法}{The Time Marching Scheme of Time Domain
     Integral Equation and Corresponding Fast Algorithm}
 
-\author{王稳}{Wang Wen}
-\advisor{赖生建\chinesespace 副教授}{Dr. Shengjian Lai}
-\school{物理电子学院}{School of Physical Electronics}
-\major{无线电物理}{Radio Physics}
+\author{朱旭东}{Zhu Xudong}
+\advisor{康昭\chinesespace 副教授}{Dr. Zhao Kang}
+\school{计算机科学与工程学院}{School of Physical Electronics}
+\major{计算机科学}{Computer Science}
 \studentnumber{201421040223}
 
 \begin{document}
