--- a/main.tex
+++ b/main.tex
@@ -45,10 +45,16 @@
 
 \chapter{绪\hspace{6pt}论}
 
+\chapter{关系抽取研究}
 
+\chapter{语法信息研究}
+
+\chapter{基于语法树的文档级关系抽取研究}
+
+\chapter{基于语法树的文档级关系抽取实验结果}
+\chapter{结论}
 \thesisacknowledgement
-在攻读博士学位期间，首先衷心感谢我的导师XXX教授
-
+在攻读计算机学士学位期间，首先热烈感谢我的导师康昭教授。经过风风雨雨的研究，我得到了他的无私关怀和支持。在此特别表达感谢之情。我还要感谢我的一直以来的帮助者们，包括学院的老师、同学、同事，以及所有支持和关心我的人。我也要感谢我的家人，他们给予我强大的内心支持和生活的安定和稳定。
 \thesisappendix
 
 
