main.tex/pdf: finish framework

--- a/main.tex
+++ b/main.tex
@@ -55,6 +55,7 @@
 \chapter{结论}
 \thesisacknowledgement
 在攻读计算机学士学位期间，首先热烈感谢我的导师康昭教授。经过风风雨雨的研究，我得到了他的无私关怀和支持。在此特别表达感谢之情。我还要感谢我的一直以来的帮助者们，包括学院的老师、同学、同事，以及所有支持和关心我的人。我也要感谢我的家人，他们给予我强大的内心支持和生活的安定和稳定。
+
 \thesisappendix
 
 
@@ -64,18 +65,16 @@
 
 %
 % Uncomment following codes to load bibliography database with native
-\bibliography command.
+%\bibliography command.
 
-\bibliographystyle{thesis-uestc}
-\bibliography{reference}
+%\bibliographystyle{thesis-uestc}
+%\bibliography{reference}
 
 
-\thesisaccomplish{publications}
+%\thesistranslationoriginal
+%\section{The OFDM Model of Multiple Carrier Waves}
 
-\thesistranslationoriginal
-\section{The OFDM Model of Multiple Carrier Waves}
-
-\thesistranslationchinese
-\section{基于多载波索引键控的正交频分多路复用系统模型}
+%\thesistranslationchinese
+%\section{基于多载波索引键控的正交频分多路复用系统模型}
 
 \end{document}
